overflow fix

--- a/assets/scss/pages/_blockchain.scss
+++ b/assets/scss/pages/_blockchain.scss
@@ -691,7 +691,6 @@ a {
 
   &__advanced {
     display: none;
-    overflow: hidden;
     color: rgba($secondary, .8);
   }
 
